--- a/res/layout/parks.xml
+++ b/res/layout/parks.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
  
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="TXT"/>
+    <ListView
+   	    android:id="@+id/parks_list"
+   	    android:layout_width="match_parent"
+   	    android:layout_height="wrap_content"
+   	    android:layout_alignParentLeft="true">
+
+    </ListView>
  
 </RelativeLayout>
