--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,13 +4,31 @@
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.-->
         
     <style name="parksTheme" parent="@style/Theme.Sherlock.Light">
-            <item name="actionBarStyle">@style/MyActionBarStyle</item>
+	        <item name="actionBarStyle">@style/MyActionBarStyle</item>
 			<item name="android:windowBackground">@android:color/white</item>
+        	<item name="actionBarTabStyle">@style/ActionBarTabStyle.Parkstheme</item>
+        	<item name="actionBarTabTextStyle">@style/MyTabTextStyle.parkstheme</item>
     </style>
 
-    <!-- Application theme. -->
     <style name="MyActionBarStyle" parent="@style/Widget.Sherlock.ActionBar">
-        <item name="displayOptions">showTitle</item>
+	        <item name="titleTextStyle">@style/text</item>
+		    <item name="displayOptions">showTitle</item>
+	        <item name="background">#E8E8E7</item>
+	        <item name="android:background">#E8E8E7</item>
     </style>
+
+    <style name="ActionBarTabStyle.Parkstheme" parent="@style/Widget.Sherlock.Light.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_example</item>
+    </style>
+
+	<style name="text" parent="style/TextAppearance.Sherlock.Widget.ActionBar.Title">
+    <item name="android:textColor">#000000</item>
+  </style>
+    
+    <style name="MyTabTextStyle.parkstheme" parent="@android:style/TextAppearance">
+	    <item name="android:textColor">@color/my_color_selector</item>
+	    <item name="android:textSize">18sp</item>
+	</style>
+
     
 </resources>
