--- a/res/layout/contact.xml
+++ b/res/layout/contact.xml
@@ -9,44 +9,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="33dp"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="22dp"
         android:text="About"
+        android:textColor="#566D30"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/button1"
         android:orientation="vertical" >
     </LinearLayout>
-
-    <Button
-        android:id="@+id/facebook"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="144dp"
-        android:text="Facebook" />
-
-    <Button
-        android:id="@+id/twitter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/instagram"
-        android:layout_below="@+id/instagram"
-        android:layout_marginTop="17dp"
-        android:text="Twitter" />
-
-    <Button
-        android:id="@+id/instagram"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/facebook"
-        android:layout_below="@+id/facebook"
-        android:layout_marginTop="22dp"
-        android:text="Instagram" />
 
     <TextView
         android:id="@+id/textView2"
@@ -55,7 +28,47 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="29dp"
+        android:layout_marginRight="22dp"
         android:text="The official Pittburgh Parks app \nFunded by the Pittsburgh Park Conservancy and UPMC Health Plan"
         android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="27dp"
+        android:src="@drawable/logo" />
+
+    <Button
+        android:id="@+id/instagram"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_alignBaseline="@+id/facebook"
+        android:layout_alignBottom="@+id/facebook"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/instagram" />
+
+    <Button
+        android:id="@+id/facebook"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_above="@+id/imageView1"
+        android:layout_alignLeft="@+id/textView2"
+        android:layout_marginBottom="70dp"
+        android:layout_marginLeft="32dp"
+        android:background="@drawable/fb" />
+
+    <Button
+        android:id="@+id/twitter"
+        android:layout_width="60sp"
+        android:layout_height="60sp"
+        android:layout_alignBaseline="@+id/instagram"
+        android:layout_alignBottom="@+id/instagram"
+        android:layout_marginLeft="32dp"
+        android:layout_toRightOf="@+id/instagram"
+        android:background="@drawable/twitter" />
  
 </RelativeLayout>
