--- a/res/layout/activity_detail.xml
+++ b/res/layout/activity_detail.xml
@@ -1,5 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="fill_parent" 
+    		android:layout_height="fill_parent"
+    		xmlns:tools="http://schemas.android.com/tools"
+    		xmlns:android="http://schemas.android.com/apk/res/android">
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -7,7 +12,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.pittsburghparks.pghparks.ActivityDetail" >
-
 
     <TextView
         android:id="@+id/title"
@@ -17,10 +21,11 @@
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:textColor="#566D30"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="#566D30" />
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
@@ -32,18 +37,9 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/title"
         android:layout_below="@+id/title"
-        android:layout_marginTop="29dp"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="29dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="27dp"
-        android:src="@drawable/logo" />
 
     <Button
         android:id="@+id/open"
@@ -52,8 +48,19 @@
         android:layout_height="40sp"
         android:layout_alignRight="@+id/imageView1"
         android:layout_below="@+id/description"
-        android:layout_marginTop="15dp"
         android:layout_marginRight="23dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/view" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/open"
+        android:layout_marginTop="30dp"
+        android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/logo" />
 </RelativeLayout>
+
+</ScrollView>
