--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+
     <ImageView
         android:id="@+id/ImageSwitcher01"
         android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_height="wrap_content"
-        android:src="@drawable/splash">
-    </ImageView>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/splash" />
 
 </RelativeLayout>
