--- a/res/layout/action_bar_title.xml
+++ b/res/layout/action_bar_title.xml
@@ -5,13 +5,13 @@
     android:background="@android:color/transparent" >
 
 	<TextView
-	    android:id="@+id/title"
+	    android:id="@+id/actionBartitle"
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:layout_alignParentLeft="true"
 	    android:layout_alignParentTop="true"
+	    android:text="Pittsburgh Parks"
 	    android:gravity="center"
-	    android:text="@string/app_name"
 	    android:textColor="@android:color/black"
 	    android:textSize="20sp" />
 
