--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -3,10 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <TextView
+        android:id="@+id/park_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    
+    <TextView
+        android:id="@+id/about"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/park_name"
+        />
+
     <ListView
             android:id="@+id/park_activities_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/activities_header" />
+            android:layout_below="@+id/title" />
 
 </LinearLayout>
