--- a/res/layout/parks_list.xml
+++ b/res/layout/parks_list.xml
@@ -9,8 +9,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="15dp"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:text="@string/app_name" />
+        android:textColor="@android:color/black" />
     
 	<ImageView android:id="@+id/park_arrow"
 	    android:layout_width="wrap_content"
