--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    		xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <TextView
+    <!-- <TextView
         android:id="@+id/park_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -14,7 +17,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/park_name"
-        />
+        /> -->
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <ListView
             android:id="@+id/park_activities_list"
