--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:tools="http://schemas.android.com/tools"
     		xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,20 +17,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/park_name"
         /> -->
-    <!-- <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <ListView
-            android:id="@+id/park_activities_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/title" /> -->
             
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>  
+        android:layout_width="match_parent"
+        android:groupIndicator="@null"/>  
 
 </LinearLayout>
