--- a/res/layout/list_group.xml
+++ b/res/layout/list_group.xml
@@ -8,9 +8,12 @@
         android:id="@+id/lblListHeader"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textSize="17dp"
-        android:textColor="#f9f93d" />
+        android:paddingLeft="20dp"
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:textSize="15dp"
+        android:background="#EAE8E5"
+        android:textColor="#000000" />
     
 
 </LinearLayout>
