--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    		xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    <!-- <TextView
-        android:id="@+id/park_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    
-    <TextView
-        android:id="@+id/about"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/park_name"
-        /> -->
 
-            
-    <ExpandableListView
-        android:id="@+id/lvExp"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:groupIndicator="@null"/>  
+	<ScrollView
+	    android:id="@+id/scroll"
+        xmlns:tools="http://schemas.android.com/tools"
+    	xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent" 
+    	android:layout_height="fill_parent">
+        
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		   
+		    android:orientation="vertical" 
+		    android:weightSum="1">
+		    
+		    <TextView
+		        android:id="@+id/name"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="20dp"
+		        android:layout_marginTop="15dp"
+		        android:textColor="#566D30" />
+		
+		    <TextView
+		        android:id="@+id/content"
+		        android:minLines="1"
+		        android:maxLines = "5"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="20dp"
+		        android:layout_marginRight="20dp"
+		        android:layout_marginTop="29dp"/>
 
-</LinearLayout>
+
+		    <ExpandableListView
+		        android:id="@+id/lvExp"
+		        android:layout_width="match_parent"
+		        android:layout_height="match_parent"
+		        android:layout_weight="1"
+		        android:groupIndicator="@null" >
+		    </ExpandableListView>
+		
+		</LinearLayout>
+ 	</ScrollView>
