--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -1,48 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-	<ScrollView
-	    android:id="@+id/scroll"
-        xmlns:tools="http://schemas.android.com/tools"
-    	xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent" 
-    	android:layout_height="fill_parent">
-        
-		<LinearLayout
-		    android:layout_width="match_parent"
-		    android:layout_height="match_parent"
-		   
-		    android:orientation="vertical" 
-		    android:weightSum="1">
-		    
-		    <TextView
-		        android:id="@+id/name"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_marginLeft="20dp"
-		        android:layout_marginTop="15dp"
-		        android:textSize="20sp"
-		        android:textColor="#000000" />
-		
-		    <TextView
-		        android:id="@+id/content"
-		        android:minLines="1"
-		        android:maxLines = "5"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:layout_marginLeft="20dp"
-		        android:layout_marginRight="20dp"
-		        android:textSize="16sp"
-		        android:layout_marginTop="20dp"
-		        android:layout_marginBottom="20dp"/>
+<ScrollView
+    android:id="@+id/scroll"
+       xmlns:tools="http://schemas.android.com/tools"
+   	xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="fill_parent" 
+   	android:layout_height="fill_parent">
+       
+	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	   
+	    android:orientation="vertical" 
+	    android:weightSum="1">
+	    
+	    <TextView
+	        android:id="@+id/name"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="20dp"
+	        android:layout_marginTop="12dp"
+	        android:textSize="20sp"
+	        android:textColor="#000000" />
+	
+	    <TextView
+	        android:id="@+id/content"
+	        android:minLines="1"
+	        android:maxLines = "5"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="20dp"
+	        android:layout_marginRight="20dp"
+	        android:textSize="16sp"
+	        android:layout_marginTop="10dp"
+	        android:layout_marginBottom="0dp"/>
+	    
+	    <Button
+	        android:id="@+id/more"
+	        style="?android:attr/buttonStyleSmall"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="20dp"
+	        android:background="@android:color/transparent"
+	        android:textColor="#478FCC"
+	        android:layout_marginTop="0dp"
+	        android:layout_marginBottom="15dp"
+	        android:text="see more..." />
 
 
-		    <ExpandableListView
-		        android:id="@+id/lvExp"
-		        android:layout_width="match_parent"
-		        android:layout_height="match_parent"
-		        android:layout_weight="1"
-		        android:groupIndicator="@null" >
-		    </ExpandableListView>
-		
-		</LinearLayout>
- 	</ScrollView>
+	    <ExpandableListView
+	        android:id="@+id/lvExp"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:layout_weight="1"
+	        android:groupIndicator="@null" >
+	    </ExpandableListView>
+	
+	</LinearLayout>
+	</ScrollView>
