--- a/res/layout/list_group.xml
+++ b/res/layout/list_group.xml
@@ -11,7 +11,7 @@
         android:paddingLeft="20dp"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
-        android:textSize="15dp"
+        android:textSize="15sp"
         android:background="#EAE8E5"
         android:textColor="#000000" />
     
