--- a/res/layout/single_park_sub_lists.xml
+++ b/res/layout/single_park_sub_lists.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content" 
         android:layout_centerVertical="true"
         android:layout_marginLeft="15dp"
-        android:textSize="17dp"
+        android:textSize="17sp"
         android:textColor="@android:color/black"
         android:text="@string/app_name" />
     
