photos link added but not working

--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -38,16 +38,33 @@
 	        android:minLines="1"
 	        android:textSize="16sp" />
 	    
-	    <ImageView
-	        android:id="@+id/pic"
-	        android:layout_width="80dp"
-	        android:layout_height="80dp"
-	        android:layout_marginLeft="10dp"
-	        android:layout_marginRight="5dp"
-	        android:layout_marginTop="10dp"
-	        android:layout_toRightOf="@+id/content"
-	        android:layout_alignTop="@+id/name"
-	        android:src="@drawable/schenley_map" />
+	     <!-- <RelativeLayout
+	        android:layout_width="match_parent"
+	    	android:layout_height="match_parent"> -->
+	    
+		    <ImageView
+		        android:id="@+id/pic"
+		        android:layout_width="80dp"
+		        android:layout_height="80dp"
+		        android:layout_marginLeft="10dp"
+		        android:layout_marginRight="5dp"
+		        android:layout_marginTop="10dp"
+		        android:layout_toRightOf="@+id/content"
+		        android:layout_alignTop="@+id/name"
+		        android:src="@drawable/schenley_map" />
+		    
+		    <Button
+		        android:id="@+id/photo"
+		        style="?android:attr/buttonStyleSmall"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_below="@+id/pic"
+		        android:layout_alignLeft="@+id/pic"
+		        android:background="@android:color/transparent"
+		        android:text="Photos"
+		        android:textSize="15sp"
+		        android:textColor="#478FCC" />
+	    <!-- </RelativeLayout> -->
 	    
 	    <Button
 	        android:id="@+id/more"
@@ -62,17 +79,6 @@
 	        android:layout_below="@+id/content"
 	        android:text="see more..." />
 
-	    <Button
-	        android:id="@+id/photo"
-	        style="?android:attr/buttonStyleSmall"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_alignLeft="@+id/pic"
-	        android:layout_below="@+id/pic"
-	        android:background="@android:color/transparent"
-	        android:text="Photos"
-	        android:textSize="15sp"
-	        android:textColor="#478FCC" />
 	    
 	    </RelativeLayout>
 
