started adding styling for parks page

--- a/res/layout/parks.xml
+++ b/res/layout/parks.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -11,4 +11,42 @@
 
     </ListView>
  
-</RelativeLayout>
+</RelativeLayout> -->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <Button
+        android:id="@+id/emerald"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Emerald" />
+
+    <Button
+        android:id="@+id/frick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="frick" />
+
+    <Button
+        android:id="@+id/riverview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="riverview" />
+
+    <Button
+        android:id="@+id/highland"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="highland" />
+    
+    <Button
+        android:id="@+id/schenley"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="schenley" />
+ 
+</LinearLayout>
