parks page styled

--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -51,7 +51,7 @@
 		        android:layout_marginTop="10dp"
 		        android:layout_toRightOf="@+id/content"
 		        android:layout_alignTop="@+id/name"
-		        android:src="@drawable/schenley_map" />
+		        android:src="@drawable/twitter" />
 		    
 		    <Button
 		        android:id="@+id/photo"
