--- a/res/layout/photo.xml
+++ b/res/layout/photo.xml
@@ -7,6 +7,7 @@
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/pager"
+		android:background="@android:color/black"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 		</android.support.v4.view.ViewPager>
