--- a/res/layout/activity_detail.xml
+++ b/res/layout/activity_detail.xml
@@ -20,16 +20,11 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_marginTop="12dp"
+        android:textSize="20sp"
         android:textColor="#566D30" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-    </LinearLayout>
+
 
     <TextView
         android:id="@+id/description"
@@ -38,8 +33,8 @@
         android:layout_alignLeft="@+id/title"
         android:layout_below="@+id/title"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="29dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:layout_marginTop="20dp"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/open"
@@ -59,6 +54,7 @@
         android:layout_below="@+id/open"
         android:layout_marginTop="30dp"
         android:layout_alignLeft="@+id/linearLayout1"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:src="@drawable/logo" />
 </RelativeLayout>
