--- a/res/layout/activity_list.xml
+++ b/res/layout/activity_list.xml
@@ -9,11 +9,11 @@
        
 	<LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
+	    android:layout_height="wrap_content"
 	   
 	    android:orientation="vertical" >
 	    
-	    <RelativeLayout
+	   <RelativeLayout
 	        android:layout_width="match_parent"
 	    	android:layout_height="match_parent">
 	    
@@ -38,10 +38,6 @@
 	        android:minLines="1"
 	        android:textSize="16sp" />
 	    
-	     <!-- <RelativeLayout
-	        android:layout_width="match_parent"
-	    	android:layout_height="match_parent"> -->
-	    
 		    <ImageView
 		        android:id="@+id/pic"
 		        android:layout_width="80dp"
@@ -65,7 +61,7 @@
 		        android:text="Photos"
 		        android:textSize="15sp"
 		        android:textColor="#478FCC" />
-	    <!-- </RelativeLayout> -->
+
 	    
 	    <Button
 	        android:id="@+id/more"
