--- a/res/layout/about.xml
+++ b/res/layout/about.xml
@@ -2,14 +2,14 @@
 
 <ScrollView
     android:id="@+id/scroll"
-       xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
    	xmlns:android="http://schemas.android.com/apk/res/android"
-       android:layout_width="fill_parent" 
+    android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">
        
 	<LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
+	    android:layout_height="wrap_content"
 	   
 	    android:orientation="vertical" 
 	    android:weightSum="1">
@@ -36,4 +36,4 @@
 	    
 	
 	</LinearLayout>
-	</ScrollView>
+</ScrollView>
