--- a/res/layout/parks.xml
+++ b/res/layout/parks.xml
@@ -3,94 +3,100 @@
     		xmlns:tools="http://schemas.android.com/tools"
     		xmlns:android="http://schemas.android.com/apk/res/android">
 
-<RelativeLayout 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
-
-    <ImageButton
-        android:id="@+id/emerald"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/emerald_view" 
-        android:adjustViewBounds="true"
-    	android:cropToPadding="false"
-    	android:scaleType="fitXY"
-        android:background="#00000000"/>
-
-    <ImageButton
-        android:id="@+id/frick"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000"
-        android:adjustViewBounds="true"
-    	android:cropToPadding="false"
-    	android:scaleType="fitXY"
-    	android:layout_below="@+id/emerald"
-        android:src="@drawable/frick" />
-
-    <ImageButton
-        android:id="@+id/riverview"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000"
-        android:adjustViewBounds="true"
-    	android:cropToPadding="false"
-    	android:layout_below="@+id/frick"
-    	android:scaleType="fitXY"
-        android:src="@drawable/riverview" />
-
-    <ImageButton
-        android:id="@+id/highland"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000"
-        android:adjustViewBounds="true"
-    	android:cropToPadding="false"
-    	android:layout_below="@+id/riverview"
-    	android:scaleType="fitXY"
-        android:src="@drawable/highland" />
-
-    <ImageButton
-        android:id="@+id/schenley"
-        android:layout_marginTop="4dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:background="#00000000"
-        android:adjustViewBounds="true"
-    	android:cropToPadding="false"
-    	android:layout_below="@+id/highland"
-    	android:scaleType="fitXY"
-        android:src="@drawable/schenley" />
-    
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/schenley"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/logo" />
-
-</RelativeLayout>
+	<RelativeLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="vertical" >
+	
+	    <ImageButton
+	        android:id="@+id/emerald"
+	        android:contentDescription="@string/app_name"
+	        android:layout_marginTop="4dp"
+	        android:layout_marginLeft="2dp"
+	        android:layout_marginRight="2dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:src="@drawable/emerald_view" 
+	        android:adjustViewBounds="true"
+	    	android:cropToPadding="false"
+	    	android:scaleType="fitXY"
+	        android:background="#00000000"/>
+	
+	    <ImageButton
+	        android:id="@+id/frick"
+	        android:contentDescription="@string/app_name"
+	        android:layout_marginTop="4dp"
+	        android:layout_marginLeft="2dp"
+	        android:layout_marginRight="2dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:background="#00000000"
+	        android:adjustViewBounds="true"
+	    	android:cropToPadding="false"
+	    	android:scaleType="fitXY"
+	    	android:layout_below="@+id/emerald"
+	        android:src="@drawable/frick" />
+	
+	    <ImageButton
+	        android:id="@+id/riverview"
+	        android:contentDescription="@string/app_name"
+	        android:layout_marginTop="4dp"
+	        android:layout_marginLeft="2dp"
+	        android:layout_marginRight="2dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:background="#00000000"
+	        android:adjustViewBounds="true"
+	    	android:cropToPadding="false"
+	    	android:layout_below="@+id/frick"
+	    	android:scaleType="fitXY"
+	        android:src="@drawable/riverview" />
+	
+	    <ImageButton
+	        android:id="@+id/highland"
+	        android:contentDescription="@string/app_name"
+	        android:layout_marginTop="4dp"
+	        android:layout_marginLeft="2dp"
+	        android:layout_marginRight="2dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:background="#00000000"
+	        android:adjustViewBounds="true"
+	    	android:cropToPadding="false"
+	    	android:layout_below="@+id/riverview"
+	    	android:scaleType="fitXY"
+	        android:src="@drawable/highland" />
+	
+	    <ImageButton
+	        android:id="@+id/schenley"
+	        android:contentDescription="@string/app_name"
+	        android:layout_marginTop="4dp"
+	        android:layout_marginLeft="2dp"
+	        android:layout_marginRight="2dp"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:background="#00000000"
+	        android:adjustViewBounds="true"
+	    	android:cropToPadding="false"
+	    	android:layout_below="@+id/highland"
+	    	android:scaleType="fitXY"
+	        android:src="@drawable/schenley" />
+	    
+	    <ImageView
+	        android:id="@+id/imageView1"
+	        android:contentDescription="@string/app_name"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="15dp"
+	        android:layout_below="@+id/schenley"
+	        android:layout_centerHorizontal="true"
+	        android:src="@drawable/logo" />
+	
+	</RelativeLayout>
 
 </ScrollView>
