webview page fixed

--- a/res/layout/events.xml
+++ b/res/layout/events.xml
@@ -5,8 +5,10 @@
 
 	<WebView
 	        android:id="@+id/webview"    
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" />
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:scrollHorizontally="true"
+	        android:layout_marginRight="0dp" />
 	<supports-screens android:smallScreens="true"
 	      	android:normalScreens="true" 
 	      	android:largeScreens="true"
