--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,8 +7,8 @@
         android:id="@+id/ImageSwitcher01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:src="@drawable/splash" />
 
 </RelativeLayout>
