--- a/res/layout/parks.xml
+++ b/res/layout/parks.xml
@@ -93,6 +93,7 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="15dp"
+	        android:layout_marginBottom="25dp"
 	        android:layout_below="@+id/schenley"
 	        android:layout_centerHorizontal="true"
 	        android:src="@drawable/logo" />
